test/input/negative/article_schema.ls
type Article = <article
    title: string,
    author: string;
    <content;
        <paragraph>+
    >
>
